--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -18,6 +18,10 @@
   <title></title>
 </head>
 <body>
-  <%= yield %>
+  <div class="container">
+    <h1>Contacts!</h1>
+
+    <%= yield %>
+  </div>
 </body>
 </html>
