add ability to see individual contact

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -13,7 +13,7 @@
   <tbody>
     <% @contacts.each do |contact| %>
     <tr>
-      <td><%= contact.id %></td>
+      <td><a href="/contacts/<%= contact.id %>"><%= contact.id %></a></td>
       <td><%= contact.first_name %></td>
       <td><%= contact.last_name %></td>
       <td><%= contact.phone %></td>
