ajax new contact form onto index page

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,4 @@
-<a href="/contacts/new">Create a new Contact</a>
+<a href="/contacts/new" id="new-contact-link">Create a new Contact</a>
 <table>
   <thead>
     <tr>
