--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -1,4 +1,4 @@
-<form action="/contacts" method="post">
+<form action="/contacts" method="post" id="new-contact-form">
   <%= erb :_contact_form_fields, :layout => false %>
   
   <div>
