ajaxified the delete form

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -21,7 +21,7 @@
       <td><%= contact.email %></td>
       <td>
         <a href="/contacts/<%= contact.id %>/edit">Edit</a>
-        <form action="/contacts/<%= contact.id %>/destroy" method="POST">
+        <form action="/contacts/<%= contact.id %>/destroy" method="POST" class="delete-form">
           <input type="submit" name="commit" value="Delete">
         </form>
       </td>
